spacing fixes in all the components

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -23,6 +23,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     // grid-gap: 18px;
+    margin-top: 32px;
+
     .form-item {
       margin-bottom: 24px;
 
