--- a/src/components/Leadership/Leadership.scss
+++ b/src/components/Leadership/Leadership.scss
@@ -54,7 +54,7 @@
           font-size: 16px;
           line-height: 150%;
           /* or 24px */
-
+          margin-top: 4px;
           letter-spacing: 0.25px;
         }
         .leader-name {
