--- a/src/components/Testimony/Testimony.scss
+++ b/src/components/Testimony/Testimony.scss
@@ -30,7 +30,7 @@
       flex-direction: row;
       justify-content: space-between;
       .subSection {
-        margin-top: 45px;
+        margin-top: 40px;
         width: 60%;
         display: flex;
         flex-direction: column;
