--- a/src/components/VerticalCarousel/VerticalCarousel.scss
+++ b/src/components/VerticalCarousel/VerticalCarousel.scss
@@ -25,7 +25,7 @@
       line-height: 150%;
       letter-spacing: 0.25px;
       color: #222222;
-      margin: 0px;
+      margin: 32px 0 8px 0;
     }
     .designation {
       margin: 0px;
